{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 14,
  "lineage": "3d6a4107-227e-5f49-1a0a-ccb71f6eff07",
  "resources": [
    {
      "module": "module.broker_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443340960488:security-group/sg-04a6d76f99b6528eb",
            "description": "MSK broker access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a6d76f99b6528eb",
            "ingress": [],
            "name": "terraform-20220228185721254300000001",
            "name_prefix": "terraform-",
            "owner_id": "443340960488",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-06576108ad947c04a"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.broker_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "keyed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "_allow_all_egress_",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4117842712",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04a6d76f99b6528eb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.broker_security_group.aws_security_group.cbd",
            "module.broker_security_group.aws_security_group.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}